# django_clone

./: pyproject.toml  test.sh
config/: asgi.py  settings.py  urls.py  wsgi.py
