[tool.poetry]
name = "clone"
version = "0.1.0"
description = ""
authors = ["hi1d <aopd408@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
mypy = "^0.931"
isort = "^5.10.1"
black = "^22.1.0"
django-ninja = "^0.17.0"
django-stubs = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80

[tool.mypy]
plugins = ["mypy_django_lugin.main"]
python_version = 3.9
strict = true 

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
modeul = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings"


